Preparing for release

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2014-11-25
+Updated=2014-12-10
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1205,6 +1205,71 @@ SLInitHook.x64=1
 SLInitOffset.x64=1EB00
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[6.4.9879.0]
+; Patch CEnforcementCore::GetInstanceOfTSLicense
+; .text:100A9CBB          call    ?IsLicenseTypeLocalOnly@CSLQuery@@SGJAAU_GUID@@PAH@Z ; CSLQuery::IsLicenseTypeLocalOnly(_GUID &,int *)
+; .text:100A9CC0          test    eax, eax
+; .text:100A9CC2          js      short loc_100A9CDF
+; .text:100A9CC4          cmp     [ebp+var_C], 0
+; .text:100A9CC8          jz      short loc_100A9CDF <- jmp
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A9CC8
+LocalOnlyCode.x86=jmpshort
+; .text:0000000180095603          call    ?IsLicenseTypeLocalOnly@CSLQuery@@SAJAEAU_GUID@@PEAH@Z ; CSLQuery::IsLicenseTypeLocalOnly(_GUID &,int *)
+; .text:0000000180095608          test    eax, eax
+; .text:000000018009560A          js      short loc_18009562B
+; .text:000000018009560C          cmp     [rsp+58h+arg_18], 0
+; .text:0000000180095611          jz      short loc_18009562B <- jmp
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=95611
+LocalOnlyCode.x64=jmpshort
+; Patch CSessionArbitrationHelper::IsSingleSessionPerUserEnabled
+; .text:10030C51          lea     eax, [esp+150h+VersionInformation]
+; .text:10030C55          inc     ebx            <- nop
+; .text:10030C56          mov     [edi], ebx
+; .text:10030C58          push    eax             ; lpVersionInformation
+; .text:10030C59          call    ds:__imp__GetVersionExW@4 ; GetVersionExW(x)
+SingleUserPatch.x86=1
+SingleUserOffset.x86=30C55
+SingleUserCode.x86=nop
+; .text:0000000180016A2E          call    memset_0
+; .text:0000000180016A33          mov     ebx, 1     <- 0
+; .text:0000000180016A38          mov     [rsp+190h+VersionInformation.dwOSVersionInfoSize], 11Ch
+; .text:0000000180016A40          lea     rcx, [rsp+190h+VersionInformation] ; lpVersionInformation
+; .text:0000000180016A45          mov     [rdi], ebx
+; .text:0000000180016A47          call    cs:__imp_GetVersionExW
+SingleUserPatch.x64=1
+SingleUserOffset.x64=16A34
+SingleUserCode.x64=Zero
+; Patch CDefPolicy::Query
+; Original
+; .text:1002DAB9          cmp     eax, [ecx+320h]
+; .text:1002DABF          jz      loc_1006C38A
+; Changed
+; .text:1002DAB9          mov     eax, 100h
+; .text:1002DABE          mov     [ecx+320h], eax
+; .text:1002DAC4          nop
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2DAB9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+; Original
+; .text:000000018001BDC5          cmp     [rcx+63Ch], eax
+; .text:000000018001BDCB          jz      sub_180045540
+; Changed
+; .text:000000018001BDC5          mov     eax, 100h
+; .text:000000018001BDCA          mov     [rcx+638h], eax
+; .text:000000018001BDD0          nop
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BDC5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+; Hook CSLQuery::Initialize
+SLInitHook.x86=1
+SLInitOffset.x86=41132
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=24750
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1328,3 +1393,22 @@ bMultimonAllowed.x64  =ECBE8
 bServerSku.x64        =ECBEC
 ulMaxDebugSessions.x64=ECBF0
 bRemoteConnAllowed.x64=ECBF4
+
+[6.4.9879.0-SLInit]
+bFUSEnabled.x86       =C27D8
+lMaxUserSessions.x86  =C27DC
+bAppServerAllowed.x86 =C27E0
+bInitialized.x86      =C27E4
+bMultimonAllowed.x86  =C27E8
+bServerSku.x86        =C27EC
+ulMaxDebugSessions.x86=C27F0
+bRemoteConnAllowed.x86=C27F4
+
+bFUSEnabled.x64       =EDBF0
+lMaxUserSessions.x64  =EDBF4
+bAppServerAllowed.x64 =EDBF8
+bInitialized.x64      =EDBFC
+bMultimonAllowed.x64  =EDC00
+bServerSku.x64        =EDC04
+ulMaxDebugSessions.x64=EDC08
+bRemoteConnAllowed.x64=EDC0C
