Config: update policy values

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2014-12-10
+Updated=2014-12-13
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -31,8 +31,14 @@ TerminalServices-RDP-7-Advanced-Compression-Allowed=1
 TerminalServices-RemoteConnectionManager-45344fe7-00e6-4ac6-9f01-d01fd4ffadfb-LocalOnly=0
 ; Max Sessions (hard limit)
 TerminalServices-RemoteConnectionManager-8dc86f1d-9969-4379-91c1-06fe1dc60575-MaxSessions=1000
-; EasyPrint
+; Allow EasyPrint
 TerminalServices-DeviceRedirection-Licenses-TSEasyPrintAllowed=1
+; Allow PnP Redirection
+TerminalServices-DeviceRedirection-Licenses-PnpRedirectionAllowed=1
+; Allow Media Foundation plugins
+TerminalServices-DeviceRedirection-Licenses-TSMFPluginAllowed=1
+; Allow DWM Remoting
+TerminalServices-RemoteConnectionManager-UiEffects-DWMRemotingAllowed=1
 
 [PatchCodes]
 nop=90
