--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2014-12-13
+Updated=2015-01-22
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1276,6 +1276,34 @@ SLInitHook.x64=1
 SLInitOffset.x64=24750
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.9926.0]
+; x64 contributed by v-yadli
+; Patch CEnforcementCore::GetInstanceOfTSLicense
+LocalOnlyPatch.x64=1
+;;;OFFSET = 0x61
+;;;BASE   = 0x95F90
+LocalOnlyOffset.x64=95FF1
+LocalOnlyCode.x64=jmpshort
+; Patch CSessionArbitrationHelper::IsSingleSessionPerUserEnabled
+SingleUserPatch.x64=1
+;;;OFFSET   = 0x43
+;;;BASE     = 0x12F90
+;;;;instruction = 0xBB 0x01 0x00 0x00 0x00
+;;;                   ^^^ +1 offset
+SingleUserOffset.x64=12A34
+SingleUserCode.x64=Zero
+; Patch CDefPolicy::Query
+DefPolicyPatch.x64=1
+;;;
+;;;BASE     = 0xBDF0
+;;;OFFSET   = 0x15
+DefPolicyOffset.x64=BE05
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+; Hook CSLQuery::Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=24EC0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1418,3 +1446,14 @@ bMultimonAllowed.x64  =EDC00
 bServerSku.x64        =EDC04
 ulMaxDebugSessions.x64=EDC08
 bRemoteConnAllowed.x64=EDC0C
+
+[10.0.9926.0-SLInit]
+; x64 contributed by v-yadli
+bFUSEnabled.x64       =EEBF0
+lMaxUserSessions.x64  =EEBF4
+bAppServerAllowed.x64 =EEBF8
+bInitialized.x64      =EEBFC
+bMultimonAllowed.x64  =EEC00
+bServerSku.x64        =EEC04
+ulMaxDebugSessions.x64=EEC08
+bRemoteConnAllowed.x64=EEC0C
