--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2015-01-22
+Updated=2015-01-26
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1277,6 +1277,22 @@ SLInitOffset.x64=24750
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.9926.0]
+; Patch CEnforcementCore::GetInstanceOfTSLicense
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A8C28
+LocalOnlyCode.x86=jmpshort
+; Patch CSessionArbitrationHelper::IsSingleSessionPerUserEnabled
+SingleUserPatch.x86=1
+SingleUserOffset.x86=31725
+SingleUserCode.x86=nop
+; Patch CDefPolicy::Query
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3CF99
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+; Hook CSLQuery::Initialize
+SLInitHook.x86=1
+SLInitOffset.x86=3F140
+SLInitFunc.x86=New_CSLQuery_Initialize
 ; x64 contributed by v-yadli
 ; Patch CEnforcementCore::GetInstanceOfTSLicense
 LocalOnlyPatch.x64=1
@@ -1448,6 +1464,14 @@ ulMaxDebugSessions.x64=EDC08
 bRemoteConnAllowed.x64=EDC0C
 
 [10.0.9926.0-SLInit]
+bFUSEnabled.x86       =C17D8
+lMaxUserSessions.x86  =C17DC
+bAppServerAllowed.x86 =C17E0
+bInitialized.x86      =C17E4
+bMultimonAllowed.x86  =C17E8
+bServerSku.x86        =C17EC
+ulMaxDebugSessions.x86=C17F0
+bRemoteConnAllowed.x86=C17F4
 ; x64 contributed by v-yadli
 bFUSEnabled.x64       =EEBF0
 lMaxUserSessions.x64  =EEBF4
