Fix previous commit

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -508,6 +508,7 @@ LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=95FF1
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x64=1
+SingleUserOffset.x64=12A34
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=BE05
