--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -543,6 +543,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=22E40
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.10240.16384]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A7D96
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=96901
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=32A95
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F74
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2F5B9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=22865
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=46581
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=250F0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -695,6 +721,7 @@ bMultimonAllowed.x86  =C17E8
 bServerSku.x86        =C17EC
 ulMaxDebugSessions.x86=C17F0
 bRemoteConnAllowed.x86=C17F4
+
 bFUSEnabled.x64       =EEBF0
 lMaxUserSessions.x64  =EEBF4
 bAppServerAllowed.x64 =EEBF8
@@ -722,3 +749,22 @@ bMultimonAllowed.x64  =F3458
 bServerSku.x64        =F345C
 ulMaxDebugSessions.x64=F3460
 bRemoteConnAllowed.x64=F3464
+
+[10.0.10240.16384-SLInit]
+bFUSEnabled.x86       =C3F60
+lMaxUserSessions.x86  =C3F64
+bAppServerAllowed.x86 =C3F68
+bInitialized.x86      =C3F6C
+bMultimonAllowed.x86  =C3F70
+bServerSku.x86        =C3F74
+ulMaxDebugSessions.x86=C3F78
+bRemoteConnAllowed.x86=C3F7C
+
+lMaxUserSessions.x64  =F23B0
+bAppServerAllowed.x64 =F23B4
+bServerSku.x64        =F23B8
+bFUSEnabled.x64       =F3460
+bInitialized.x64      =F3464
+bMultimonAllowed.x64  =F3468
+ulMaxDebugSessions.x64=F346C
+bRemoteConnAllowed.x64=F3470
