--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-01-26
+Updated=2016-01-28
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -647,6 +647,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=D160
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14251.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5D58
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=95CD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35A85
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=2A9C4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=30159
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B5D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=44FD2
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=D160
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -886,6 +912,25 @@ ulMaxDebugSessions.x64=F346C
 bRemoteConnAllowed.x64=F3470
 
 [10.0.11102.1000-SLInit]
+bInitialized.x86      =C1F5C
+bServerSku.x86        =C1F60
+lMaxUserSessions.x86  =C1F64
+bAppServerAllowed.x86 =C1F68
+bRemoteConnAllowed.x86=C1F6C
+bMultimonAllowed.x86  =C1F70
+ulMaxDebugSessions.x86=C1F74
+bFUSEnabled.x86       =C1F78
+
+bInitialized.x64      =F2430
+bRemoteConnAllowed.x64=F2434
+bMultimonAllowed.x64  =F2438
+ulMaxDebugSessions.x64=F243C
+bFUSEnabled.x64       =F2440
+bServerSku.x64        =F244C
+lMaxUserSessions.x64  =F2450
+bAppServerAllowed.x64 =F2454
+
+[10.0.14251.1000-SLInit]
 bInitialized.x86      =C1F5C
 bServerSku.x86        =C1F60
 lMaxUserSessions.x86  =C1F64
