INI: Add support for 10.0.14295.1000

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-03-06
+Updated=2016-04-06
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -725,6 +725,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=CE50
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14295.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A4D28
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D691
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35925
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=25514
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2FF89
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA35
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=47748
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=C860
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1038,3 +1064,22 @@ bRemoteConnAllowed.x64=F0464
 bMultimonAllowed.x64  =F0468
 ulMaxDebugSessions.x64=F046C
 bFUSEnabled.x64       =F0470
+
+[10.0.14295.1000-SLInit]
+bInitialized.x86      =C0F5C
+bServerSku.x86        =C0F60
+lMaxUserSessions.x86  =C0F64
+bAppServerAllowed.x86 =C0F68
+bRemoteConnAllowed.x86=C0F6C
+bMultimonAllowed.x86  =C0F70
+ulMaxDebugSessions.x86=C0F74
+bFUSEnabled.x86       =C0F78
+
+bServerSku.x64        =E73C0
+lMaxUserSessions.x64  =E73C4
+bAppServerAllowed.x64 =E73C8
+bInitialized.x64      =E8460
+bRemoteConnAllowed.x64=E8464
+bMultimonAllowed.x64  =E8468
+ulMaxDebugSessions.x64=E846C
+bFUSEnabled.x64       =E8470
