INI: Add support for 10.0.14316.1000

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-04-06
+Updated=2016-04-14
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -751,6 +751,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=C860
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14316.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A8E88
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8F5F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=32B55
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=26B04
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3C1C9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1D295
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=46ABD
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=CC60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1083,3 +1109,22 @@ bRemoteConnAllowed.x64=E8464
 bMultimonAllowed.x64  =E8468
 ulMaxDebugSessions.x64=E846C
 bFUSEnabled.x64       =E8470
+
+[10.0.14316.1000-SLInit]
+bInitialized.x86      =C4F58
+bServerSku.x86        =C4F5C
+lMaxUserSessions.x86  =C4F60
+bAppServerAllowed.x86 =C4F64
+bRemoteConnAllowed.x86=C4F68
+bMultimonAllowed.x86  =C4F6C
+ulMaxDebugSessions.x86=C4F70
+bFUSEnabled.x86       =C4F74
+
+bServerSku.x64        =E93C0
+lMaxUserSessions.x64  =E93C4
+bAppServerAllowed.x64 =E93C8
+bInitialized.x64      =EA460
+bRemoteConnAllowed.x64=EA464
+bMultimonAllowed.x64  =EA468
+ulMaxDebugSessions.x64=EA46C
+bFUSEnabled.x64       =EA470
