INI: Add support for 10.0.14332.1001

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-04-14
+Updated=2016-04-29
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -777,6 +777,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=CC60
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14332.1001]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A8E98
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8F601
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=357E5
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=2AE44
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=316A9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=4755F
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=CAD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1111,6 +1137,25 @@ ulMaxDebugSessions.x64=E846C
 bFUSEnabled.x64       =E8470
 
 [10.0.14316.1000-SLInit]
+bInitialized.x86      =C4F58
+bServerSku.x86        =C4F5C
+lMaxUserSessions.x86  =C4F60
+bAppServerAllowed.x86 =C4F64
+bRemoteConnAllowed.x86=C4F68
+bMultimonAllowed.x86  =C4F6C
+ulMaxDebugSessions.x86=C4F70
+bFUSEnabled.x86       =C4F74
+
+bServerSku.x64        =E93C0
+lMaxUserSessions.x64  =E93C4
+bAppServerAllowed.x64 =E93C8
+bInitialized.x64      =EA460
+bRemoteConnAllowed.x64=EA464
+bMultimonAllowed.x64  =EA468
+ulMaxDebugSessions.x64=EA46C
+bFUSEnabled.x64       =EA470
+
+[10.0.14332.1001-SLInit]
 bInitialized.x86      =C4F58
 bServerSku.x86        =C4F5C
 lMaxUserSessions.x86  =C4F60
