Correct offsets for 14352 (fix #121)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-05-30
+Updated=2016-06-17
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -871,10 +871,10 @@ SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14352.1002]
 LocalOnlyPatch.x86=1
-LocalOnlyOffset.x86=A4474
+LocalOnlyOffset.x86=A4478
 LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
-LocalOnlyOffset.x64=8D90C
+LocalOnlyOffset.x64=8D911
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x86=1
 SingleUserOffset.x86=35465
