--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -947,6 +947,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=CCE0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14372.0]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8F931
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=295A4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B295
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=CC10
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1422,3 +1448,22 @@ bRemoteConnAllowed.x64=EA484
 bMultimonAllowed.x64  =EA488
 ulMaxDebugSessions.x64=EA48C
 bFUSEnabled.x64       =EA490
+
+[10.0.14372.0-SLInit]
+bInitialized.x86      =
+bServerSku.x86        =
+lMaxUserSessions.x86  =
+bAppServerAllowed.x86 =
+bRemoteConnAllowed.x86=
+bMultimonAllowed.x86  =
+ulMaxDebugSessions.x86=
+bFUSEnabled.x86       =
+
+bServerSku.x64        =EA47C
+lMaxUserSessions.x64  =EA480
+bAppServerAllowed.x64 =EA484
+bInitialized.x64      =EA460
+bRemoteConnAllowed.x64=EA464
+bMultimonAllowed.x64  =EA468
+ulMaxDebugSessions.x64=EA46C
+bFUSEnabled.x64       =EA470
