--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-06-17
+Updated=2016-06-27
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -949,25 +949,25 @@ SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14372.0]
 LocalOnlyPatch.x86=1
-LocalOnlyOffset.x86=
+LocalOnlyOffset.x86=A7698
 LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8F931
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x86=1
-SingleUserOffset.x86=
+SingleUserOffset.x86=34635
 SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=295A4
 SingleUserCode.x64=Zero
 DefPolicyPatch.x86=1
-DefPolicyOffset.x86=
+DefPolicyOffset.x86=2FF69
 DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=1B295
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x86=1
-SLInitOffset.x86=
+SLInitOffset.x86=460D2
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=CC10
@@ -1450,20 +1450,20 @@ ulMaxDebugSessions.x64=EA48C
 bFUSEnabled.x64       =EA490
 
 [10.0.14372.0-SLInit]
-bInitialized.x86      =
-bServerSku.x86        =
-lMaxUserSessions.x86  =
-bAppServerAllowed.x86 =
-bRemoteConnAllowed.x86=
-bMultimonAllowed.x86  =
-ulMaxDebugSessions.x86=
-bFUSEnabled.x86       =
+bInitialized.x86      =C3F68
+bServerSku.x86        =C3F6C
+lMaxUserSessions.x86  =C3F70
+bAppServerAllowed.x86 =C3F74
+bRemoteConnAllowed.x86=C3F78
+bMultimonAllowed.x86  =C3F7C
+ulMaxDebugSessions.x86=C3F80
+bFUSEnabled.x86       =C3F84
 
-bServerSku.x64        =EA47C
-lMaxUserSessions.x64  =EA480
-bAppServerAllowed.x64 =EA484
 bInitialized.x64      =EA460
 bRemoteConnAllowed.x64=EA464
 bMultimonAllowed.x64  =EA468
 ulMaxDebugSessions.x64=EA46C
 bFUSEnabled.x64       =EA470
+bServerSku.x64        =EA47C
+lMaxUserSessions.x64  =EA480
+bAppServerAllowed.x64 =EA484
