--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-08-28
+Updated=2016-09-03
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1169,6 +1169,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=C930
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14915.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A6D98
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8E241
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35E35
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=29EB4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=30399
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B4A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=46092
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=CE40
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1796,3 +1822,22 @@ bRemoteConnAllowed.x64=E8474
 bMultimonAllowed.x64  =E8478
 ulMaxDebugSessions.x64=E847C
 bFUSEnabled.x64       =E8480
+
+[10.0.14915.1000-SLInit]
+bInitialized.x86      =C4F6C
+bServerSku.x86        =C4F70
+lMaxUserSessions.x86  =C4F74
+bAppServerAllowed.x86 =C4F78
+bRemoteConnAllowed.x86=C4F7C
+bMultimonAllowed.x86  =C4F80
+ulMaxDebugSessions.x86=C4F84
+bFUSEnabled.x86       =C4F88
+
+bServerSku.x64        =E93D0
+lMaxUserSessions.x64  =E93D4
+bAppServerAllowed.x64 =E93D8
+bInitialized.x64      =EA470
+bRemoteConnAllowed.x64=EA474
+bMultimonAllowed.x64  =EA478
+ulMaxDebugSessions.x64=EA47C
+bFUSEnabled.x64       =EA480
