--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-09-15
+Updated=2016-09-27
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1247,6 +1247,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=CE40
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14931.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A4908
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8B411
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35705
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=29264
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2FF69
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1AD05
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=452FD
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=C7FC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -1931,3 +1957,22 @@ bRemoteConnAllowed.x64=EA474
 bMultimonAllowed.x64  =EA478
 ulMaxDebugSessions.x64=EA47C
 bFUSEnabled.x64       =EA480
+
+[10.0.14931.1000-SLInit]
+bInitialized.x86      =C1F6C
+bServerSku.x86        =C1F70
+lMaxUserSessions.x86  =C1F74
+bAppServerAllowed.x86 =C1F78
+bRemoteConnAllowed.x86=C1F7C
+bMultimonAllowed.x86  =C1F80
+ulMaxDebugSessions.x86=C1F84
+bFUSEnabled.x86       =C1F88
+
+bServerSku.x64        =E63D0
+lMaxUserSessions.x64  =E63D4
+bAppServerAllowed.x64 =E63D8
+bInitialized.x64      =E7470
+bRemoteConnAllowed.x64=E7474
+bMultimonAllowed.x64  =E7478
+ulMaxDebugSessions.x64=E747C
+bFUSEnabled.x64       =E7480
