INI: Add support for new builds (fix #173)
10.0.14946.1000 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-10-08
+Updated=2016-10-19
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1325,6 +1325,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=258EC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14946.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A4018
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=911AB
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35355
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=199AD
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2FCD9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1064E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=44CFD
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=258DC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2049,6 +2075,25 @@ lMaxUserSessions.x64  =E8480
 bAppServerAllowed.x64 =E8484
 
 [10.0.14942.1000-SLInit]
+bInitialized.x86      =C0F6C
+bServerSku.x86        =C0F70
+lMaxUserSessions.x86  =C0F74
+bAppServerAllowed.x86 =C0F78
+bRemoteConnAllowed.x86=C0F7C
+bMultimonAllowed.x86  =C0F80
+ulMaxDebugSessions.x86=C0F84
+bFUSEnabled.x86       =C0F88
+
+bInitialized.x64      =EC460
+bRemoteConnAllowed.x64=EC464
+bMultimonAllowed.x64  =EC468
+ulMaxDebugSessions.x64=EC46C
+bFUSEnabled.x64       =EC470
+bServerSku.x64        =EC47C
+lMaxUserSessions.x64  =EC480
+bAppServerAllowed.x64 =EC484
+
+[10.0.14946.1000-SLInit]
 bInitialized.x86      =C0F6C
 bServerSku.x86        =C0F70
 lMaxUserSessions.x86  =C0F74
